# eggimg

./: CMakeLists.txt  LICENSE  README.md
include/: bitmap.h  eggimg.h  file.h
include/glad/: glad.h
src/: bitmap.c  eggimg.cpp  file.c  glad.c
